Fix styling for success page on mobile

--- a/src/main/resources/public/styles/rsvps.css
+++ b/src/main/resources/public/styles/rsvps.css
@@ -14,3 +14,7 @@
 .rsvp_form legend {
     color: white;
 }
+
+#thank-you {
+    margin-top: 120px;
+}
